syntax = "proto3";

//protoc -I ./  ./*.proto --go_out=plugins=grpc:.


package inside_api;

service InternalApi {
    rpc GetLoginLink (GetLoginLinkRequest) returns (LoginLinkResponse) {
    }

    rpc AddReceipt (AddReceiptRequest) returns (AddReceiptResponse) {
    }

    rpc GetUsers (NoParams) returns (GetUsersResponse) {
    }

    rpc GetUser (GetUserRequest) returns (GetUserResponse) {
    }

    rpc RegisterUser (UserRegistrationRequest) returns (UserRegistrationResponse) {

    }
}

message GetLoginLinkRequest {
    int32 telegramId = 1;
}

message GetUserRequest {
    int32 telegramId = 1;
}

message LoginLinkResponse {
    string url = 1;
    int64 expiration = 2;
}

message AddReceiptRequest {
    string userId = 1;
    string receiptQr = 2;
}

message AddReceiptResponse {
    string error = 1;
}

message NoParams {

}

message User {
    string userId = 1;
    int32 telegramId = 2;
}

message GetUserResponse {
    User user = 1;
}

message GetUsersResponse {
    repeated User users = 1;
}

message UserRegistrationRequest {
    int32 telegramId = 1;
}

message UserRegistrationResponse {
    string userId = 1;
}